thuylqadd file